# resumesmartbuild2.1

./: .env.example  .gitignore  .replit  .replit.deployment  404.html  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  NEWSLETTER_SETUP.md  PRODUCTION_READINESS_REPORT.md  README.md  SYSTEM_HEALTH_REPORT.md  admin_newsletter.py  app.yaml  ats.html  autocomplete_demo.html  cloudbuild.yaml  config.py  cookie-policy.html  deployment.yaml  gunicorn.conf.py  index.html  main.py  main_server.py  manifest.json  minimal_server.js  mobile_test.html  newsletter.js  package-lock.json  package.json  paypal_config.html  paypal_server.py  pdf_generator.py  premium.html  premium_subscription.js  privacy-policy.html  pyproject.toml  replit.md  robots.txt  (+11 more)
admin/: articles.html  enhanced-articles-crud.html  markdown-guide.html  templates.html
api/: config.py
articles/: article-1.html  article1.html  article2.html  article3.html  enhanced-template.html  index.html
attached_assets/: Pasted--AI-SYSTEM-PROMPT-ResumeSmartBuild-v1-0-You-are-a-senior-full-stack-AI-web-developer-Your-1752640132815_1752640132816.txt  Pasted--Build-a-full-Article-Management-System-Admin-Side-for-ResumeSmartBuild-com-CORE-FEA-1753588571074_1753588571077.txt  Pasted--CONTINUATION-PROMPT-RESUMESMARTBUILD-COM-ENHANCEMENT-ARTICLES-SYSTEM-HOMEPAGE-PREVIEW-Ple-1753584950310_1753584950311.txt  Pasted--PROJECT-UPGRADE-ResumeSmartBuild-com-Admin-Article-System-Homepage-Article-Previews-US-1753587796338_1753587796341.txt  (+2 more)
client/: package.json
public/: index.html
python/: ats_scanner.py
(+33 files in other folders)
